--- a/index.html
+++ b/index.html
@@ -58,10 +58,90 @@
     .use-case-card .btn:hover {
       background-color: #5a370d;
     }
+    /* Notification Slider Styles */
+    .notification-slider {
+      background: #7b4d11;
+      color: #fff;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 2000;
+      overflow: hidden;
+      transition: height 0.3s ease;
+    }
+    .notification-slider.hidden {
+      height: 0;
+    }
+    .notification-slider .swiper-slide {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 20px;
+      font-size: 0.9rem;
+    }
+    .notification-slider .swiper-slide a {
+      color: #fff;
+      text-decoration: underline;
+      margin-left: 5px;
+    }
+    .notification-slider .swiper-slide a:hover {
+      color: #f0f0f0;
+    }
+    .notification-slider .close-btn {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .notification-slider .swiper-pagination {
+      bottom: 5px;
+    }
+    .notification-slider .swiper-pagination-bullet {
+      background: #fff;
+      opacity: 0.7;
+    }
+    .notification-slider .swiper-pagination-bullet-active {
+      opacity: 1;
+    }
+    /* Adjust header position when slider is visible */
+    .header {
+      transition: top 0.3s ease;
+    }
+    .notification-slider.hidden + .header {
+      top: 0;
+    }
+    .notification-slider:not(.hidden) + .header {
+      top: 50px;
+    }
   </style>
 </head>
 
 <body class="index-page">
+   <!-- Notification Slider -->
+  <div class="notification-slider" id="notificationSlider">
+    <div class="swiper notification-swiper">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          FLIPS' AI delivers 95% accurate flood predictions. <a href="about-ai.html">Learn More</a>
+        </div>
+        <div class="swiper-slide">
+          Monitor water levels in real-time with FLIPS. <a href="about-water.html">Discover How</a>
+        </div>
+        <div class="swiper-slide">
+          FLIPS AI reduces flood damages by 30%. <a href="about-ai.html">See the Impact</a>
+        </div>
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+    <button class="close-btn" id="closeNotification"><i class="bi bi-x"></i></button>
+  </div><!-- /Notification Slider -->
+
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
