--- a/index.html
+++ b/index.html
@@ -160,8 +160,6 @@
         <ul>
           <li><a href="#hero" class="nav-link fw-bold active">Home</a></li>
           <li><a href="#about" class="nav-link fw-bold">About</a></li>
-          <li><a href="about-water.html" class="nav-link fw-bold">About Water</a></li>
-          <li><a href="about-ai.html" class="nav-link fw-bold">About AI</a></li>
           <li><a href="#features" class="nav-link fw-bold">Features</a></li>
           <li><a href="#services" class="nav-link fw-bold">Services</a></li>
           <li><a href="#pricing" class="nav-link fw-bold">Pricing</a></li>
@@ -620,6 +618,54 @@
         </div>
       </div>
     </section><!-- /Call To Action Section -->
+    
+    <!-- Blog Section -->
+    <section id="blog" class="blog section light-background">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Our Blog</h2>
+        <p>Stay informed with the latest insights on flood prediction and environmental management.</p>
+      </div>
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row g-4">
+          <!-- Blog Post 1 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="blog-card card h-100">
+              <img src="https://via.placeholder.com/400x250?text=Flood+Prediction" class="card-img-top" alt="Flood Prediction Blog">
+              <div class="card-body">
+                <h4 class="card-title">The Future of Flood Prediction</h4>
+                <p class="card-text">Discover how AI is revolutionizing flood forecasting with 95% accuracy, helping businesses and individuals prepare better.</p>
+                <a href="blog.html#post-1" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post 2 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="blog-card card h-100">
+              <img src="https://via.placeholder.com/400x250?text=Water+Management" class="card-img-top" alt="Water Management Blog">
+              <div class="card-body">
+                <h4 class="card-title">Real-Time Water Monitoring Benefits</h4>
+                <p class="card-text">Learn how real-time water level tracking can protect communities and optimize resource management.</p>
+                <a href="blog.html#post-2" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+          <!-- Blog Post 3 -->
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="blog-card card h-100">
+              <img src="https://via.placeholder.com/400x250?text=Disaster+Planning" class="card-img-top" alt="Disaster Planning Blog">
+              <div class="card-body">
+                <h4 class="card-title">Disaster Preparedness Strategies</h4>
+                <p class="card-text">Explore how businesses leverage FLIPS data to safeguard assets and plan for flood events.</p>
+                <a href="blog.html#post-3" class="read-more">Read More <i class="bi bi-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="400">
+          <a href="blog.html" class="btn btn-primary" style="background: #7b4d11; border: none;">View All Posts</a>
+        </div>
+      </div>
+    </section><!-- /Blog Section -->
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section light-background">
